--- a/web-portfolio/src/components/Introducao.css
+++ b/web-portfolio/src/components/Introducao.css
@@ -1,3 +1,8 @@
-.intro-container{
-    margin-left: 400px;
+.index-module_type__E-SaG{
+    font-size: 47px !important;
+    height: 116px;
 }
+.bottom-phrase{
+    margin-top: 20px;
+}
+  
