--- a/web-portfolio/src/components/FixLeft.css
+++ b/web-portfolio/src/components/FixLeft.css
@@ -69,14 +69,14 @@ button{
     justify-content: space-evenly;
     align-items: center;
     color: #04041f;
-    background-color: white;
+    background-color: #00C9FF;
     padding: 15px;
     border-radius: 25px;
     text-decoration: none;
     cursor: pointer;
     font-weight: bold;
     font-size: 20px;
-    border: 1px solid white;
+    border: 1px solid #00C9FF;
     transition: 0.25s;
 }
 .left-container .email svg{
