--- a/web-portfolio/src/components/Curriculo.css
+++ b/web-portfolio/src/components/Curriculo.css
@@ -1,8 +1,7 @@
 .curriculum-container {
     visibility: hidden;
-    transform: translateY(100px);
+    transform: translateY(800px);
     transition: opacity 2s ease, transform 2s ease;
-    margin-bottom: 100px;
 }
 .aparece {
     visibility: visible;
@@ -10,7 +9,47 @@
 }
 .curriculum-container h2{
     font-size: 50px;
+    margin-bottom: 40px;
 }
 .curriculum-container h2 span{
     color: #00C9FF;
+}
+.curriculum-container .educations-experience:last-child{
+    padding-bottom: 0;
+}
+.educations-experience{
+    margin-left: 10px;
+    padding-left: 51px;
+    padding-bottom: 60px;
+    border-left: 1px solid #6b6a6a;
+}
+.educations-experience h6{
+    margin-bottom: 30px;
+    font-size: 16px;
+    transition: 0.5s;
+}
+.educations-experience h3{
+    margin-bottom: 5px;
+    font-size: 24px;
+}
+.educations-experience p{
+    margin-bottom: 15px;
+    font-size: 13px;
+}
+.educations-experience p, .educations-experience h6{
+    color: #b9b5b5;
+}
+.title-hover{
+    position: relative;
+    display: flex;
+    transition: 0.5s;
+}
+.educations-experience:hover > .title-hover, .educations-experience:hover > .title-hover h6 {
+    color: #00C9FF;
+}
+.title-hover span{
+    height: 16px;
+    background-color: #04041f;
+    position: absolute;
+    left: -60px;
 }
