--- a/web-portfolio/src/components/ToolBar.css
+++ b/web-portfolio/src/components/ToolBar.css
@@ -6,21 +6,28 @@
     position: fixed;
     right: 0px;
     top: -1px;
-    padding-left: 26px;
-    padding-right: 176px;
-    max-width: 402px;
+    width: 300px;
     z-index: 2;
+    padding-top: 20px;
     transform: translateX(100%);
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
 }
 .toolbar-slide {
     transform: translateX(0%);
-    
+}
+.tool-bar h2{
+    text-align: center;
 }
 .tool-bar .menu-icons{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 55px;
+    margin-top: 50px;
+    padding-left: 80px;
+}
+.tool-bar .menu-icons .icon a{
+    display: flex;
+    gap: 10px;
 }
 .tool-bar span{
     cursor: pointer;
